--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-@import url('http://fonts.cdnfonts.com/css/womby');
+@font-face {
+    font-family: 'Womby';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Womby'), url('./assets/fonts/Womby-Regular.woff') format('woff');
+}
 
 body {
     padding: 0;
